load-tests/query-operation/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: query-operation
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bal.perf.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: query-operation-sv
                port:
                  number: 9092
